# circuit-streams

./: .gitignore  .merlin  README.md  circuit_streams.opam  dune-project  myocamlbuild.ml
.github/workflows/: run.yml  test.yml
lib/: approximant.ml  belnap.ml  dot.ml  dune  expression.ml  function.ml  helpers.ml  mealy.ml  order.ml  streams.ml  values.ml
lib/circuits/: README.md  aux.ml  aux.mli  circuit.ml  core.ml  diagram.ml  diagram.mli  display.ml  display.mli  dune  evaluate.ml  evaluate.mli  examples.ml  flipflop.ml  latch.ml  make.ml  make.mli
lib/core/: helpers.ml
lib/dot/: Core.ml  circuit_diagram.ml  dune  mealy_machine.ml
lib/helpers/: arrays.ml  dune  help.ml  lists.ml  nats.ml  strings.ml
lib/logic/: approximant.ml  dune  gates.ml  order.ml  order.mli  values.ml  values.mli  values.mli.css
lib/streams/: approximant.ml  diagram.ml  dot.ml  dune  expression.ml  functions.ml  mealy.ml  table.ml
proofs/: Circuits.agda  Compute.agda  Convert.agda  Expression.agda  Four.agda  Table.agda  Two.agda  Values.agda  proofs.agda-lib
src/: Approximant.ml  Belnap.ml  Dot.ml  Example.ml  Helpers.ml  Mealy.ml  Order.ml  Print.ml  Streams.ml
test/: dune
